css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.background {
  width: 100vw ;
  height: 100vh;
  border: 1px solid #333;
  position: fixed;
  overflow: hidden;
  background-image: url(../images/background.jpg);
  background-repeat: no-repeat;
  background-size: auto;
}
.game-board {
  width: 1024px;
  height: 500px;
  border: 1px solid #333;
  border-bottom: 12px solid #4E3B31;
  top: 100px;
  left: 200px;
  position: relative;
  overflow: hidden;
  background: linear-gradient(#87CEEB, #E0F6FF);
}

.scoreDiv {
  width: 200px;
  height: 60px;
  position: relative;
  background: linear-gradient( #E0F6FF, #87CEEB);
  top: 5px;
  left: 5px;
  overflow: hidden;
  border-radius: 5px;
}

.score {
  position: relative;
  margin-left: 25%;
  margin-top: -10px;
  font-size: large !important;
  font-weight: bold;
  color: #4E3B31;
}


.money {
  position: absolute;
  background-image: url(../images/money.png);
  width: 80px;
  background-size: 80px;
  height: 70px;
  background-repeat: no-repeat;
  top: 115px;
  left: -5px;
  rotate: 105deg;
  animation: catraca 6.5s linear 1 10s;
}

.coinDiv {
  width: 200px;
  height: 60px;
  position: absolute;
  background: linear-gradient( #E0F6FF, #87CEEB);
  top: 5px;
  left: 810px;
  overflow: hidden;
  border-radius: 5px;
}



.moedas {
  position: relative;
  background-image: url(../images/moeda.png);
  width: 40px;
  background-size: 35px;
  height: 70px;
  background-repeat: no-repeat;
  top: 20%;
  left: 15%;
}

.moedas2 {
  position: absolute;
  background-image: url(../images/moeda.png);
  width: 40px;
  background-size: 35px;
  height: 70px;
  background-repeat: no-repeat;
  top: 20%;
  left: 40%;
}

.moedas3 {
  position: absolute;
  background-image: url(../images/moeda.png);
  width: 40px;
  background-size: 35px;
  height: 70px;
  background-repeat: no-repeat;
  top: 20%;
  left: 65%;
}

.moedas4 {
  position: absolute;
  background-image: url(../images/moeda.png);
  width: 40px;
  background-size: 30px;
  height: 70px;
  background-repeat: no-repeat;
  top: 25%;
  left: 65%;
}

.moedas5 {
  position: absolute;
  background-image: url(../images/moeda.png);
  width: 40px;
  background-size: 30px;
  height: 70px;
  background-repeat: no-repeat;
  top: 25%;
  left: 85%;
}

/* Player */

.max {
  position: absolute;
  bottom: 0px;
  margin-left: 90px;
  background-image: url(../images/max-run.gif);
  width: 150px;
  height: 130px;
  background-size: 150px;
  background-repeat: no-repeat;
}

/* Enemies */

.cacto {
  position: absolute;
  bottom: -20px;
  background-image: url(../images/run-Ibaneis.gif);
  width: 130px;
  height: 130px;
  right: 1200px;
  background-size: 130px;
  background-repeat: no-repeat;
  animation: cacto 4s linear 1 50s;
}

.damares {
  position: absolute;
  bottom: -25px;
  background-image: url(../images/run-Damares.gif);
  width: 95px;
  height: 95px;
  right: 1200px;
  background-size: 95px;
  background-repeat: no-repeat;
  animation: cacto 16.6s linear 1 -1.6s;
}

.meninoRosa {
  position: absolute;
  bottom: -42px;
  background-image: url(../images/meninoRosa.png);
  width: 40px;
  height: 100px;
  right: 1200px;
  background-size: 40px;
  background-repeat: no-repeat;
  animation: cacto 16.6s linear 1 -1.1s;
}

.meninaAzul {
  position: absolute;
  bottom: -42px;
  background-image: url(../images/meninaAzul.png);
  width: 40px;
  height: 100px;
  right: 1200px;
  background-size: 40px;
  background-repeat: no-repeat;
  animation: cacto 16.6s linear 1 -1.4s;
}
.meninoRosa2 {
  position: absolute;
  bottom: -42px;
  background-image: url(../images/meninoRosa.png);
  width: 40px;
  height: 100px;
  right: 1200px;
  background-size: 40px;
  background-repeat: no-repeat;
  animation: cacto 16.6s linear 1 -2.5s;
}

.meninaAzul2 {
  position: absolute;
  bottom: -42px;
  background-image: url(../images/meninaAzul.png);
  width: 40px;
  height: 100px;
  right: 1200px;
  background-size: 40px;
  background-repeat: no-repeat;
  animation: cacto 16.6s linear 1 -2.3s;
}

.poEnemy {
  position: absolute;
  bottom: -42px;
  background-image: url(../images/run-octavio.gif);
  width: 220px;
  height: 220px;
  right: 1200px;
  background-size: 220px;
  background-repeat: no-repeat;
  animation: cacto 4s linear 1 22s;
}

.board {
  position: absolute;
  bottom: -100px;
  background-image: url(../images/placa.png);
  width: 390px;
  height: 390px;
  right: 1200px;
  background-size: 390px;
  background-repeat: no-repeat;
  animation: cacto 6s linear 1 14.5s;
}

.catraca{
  position: absolute;
  bottom: -190px;
  background-image: url(../images/catraca.png);
  width: 580px;
  height: 580px;
  right: 1200px;
  background-size: 580px;
  background-repeat: no-repeat;
  animation: catraca 4s linear 1  1.5s;
}

.enemyEntulho{
  position: absolute;
  bottom: -240px;
  background-image: url(../images/restoObras.png);
  width: 600px;
  height: 600px;
  right: 1200px;
  background-size: 600px;
  background-repeat: no-repeat;
  animation: catraca 4s linear 1 9s;
}

.worksBoard{
  position: absolute;
  bottom: -38px;
  background-image: url(../images/em-Obras.png);
  width: 120px;
  height: 120px;
  right: 1200px;
  background-size: 120px;
  background-repeat: no-repeat;
  transform-style: preserve-3d;
  transform: perspective(10cm) rotateX(38deg) rotateY(-15deg);
  animation: cacto 4.3s linear 1  7s;
}



/* Tagua */
.catracaTagua{
  position: absolute;
  bottom: -190px;
  background-image: url(../images/catraca.png);
  width: 580px;
  height: 580px;
  right: 1200px;
  background-size: 580px;
  background-repeat: no-repeat;
  animation: catraca 4s linear 1  36.5s;
}

.enemyEntulhoTagua{
  position: absolute;
  bottom: -240px;
  background-image: url(../images/restoObras.png);
  width: 600px;
  height: 600px;
  right: 1200px;
  background-size: 600px;
  background-repeat: no-repeat;
  animation: catraca 4s linear 1 42s;
}
/* ... */

